# string-searcher

./: Cargo.toml
benches/: case_insensitive.rs  simple_benchmark.rs
src/: search.rs
src/search/: char_lookup.rs
