[package]
name = "fsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
criterion = "0.5.1"

[[bench]]
name = "simple_benchmark"
harness = false
